--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,20 @@
         android:id="@+id/btn_inject_reflect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注入反射版"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="注入反射版" />
 
     <Button
         android:id="@+id/btn_inject_apt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="注入apt版"
-        app:layout_constraintBottom_toBottomOf="@id/btn_inject_reflect"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toRightOf="@id/btn_inject_reflect"
+        android:text="注入apt版" />
+
+    <Button
+        android:id="@+id/btn_paging"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/btn_inject_apt"
+        android:text="Paging" />
 
 </android.support.constraint.ConstraintLayout>
